--- a/frontend/src/assets/sass/basics/_burger.scss
+++ b/frontend/src/assets/sass/basics/_burger.scss
@@ -54,7 +54,7 @@
     flex-direction: column;
     position: fixed;
     right: 0;
-    bottom: 0;
+    top: 40px;
     height: calc(100vh - 76px);
     background: rgba(255, 255, 255, 0.9);
     border-left: 1px solid #c3c3c3;
