--- a/frontend/src/assets/sass/basics/_helpers.scss
+++ b/frontend/src/assets/sass/basics/_helpers.scss
@@ -41,6 +41,9 @@
   &.align-start {
     align-items: flex-start;
   }
+  &.align-end {
+    align-items: flex-end;
+  }
   &.row {
     flex-direction: row;
   }
