--- a/frontend/src/assets/sass/components/_footer.scss
+++ b/frontend/src/assets/sass/components/_footer.scss
@@ -5,6 +5,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: #0c16164a;
 }
 
 .copy-rights {
