--- a/frontend/src/assets/sass/views/_taskDetails.scss
+++ b/frontend/src/assets/sass/views/_taskDetails.scss
@@ -7,6 +7,7 @@
   border-radius: 4px;
   cursor: default;
   position: relative;
+  margin-top: 79px;
   padding: 15px 0px 15px 40px;
 
   .icon-window {
