--- a/frontend/src/assets/sass/basics/_burger.scss
+++ b/frontend/src/assets/sass/basics/_burger.scss
@@ -29,9 +29,9 @@
 
   &:hover {
     span {
-      background: #ebecf0;
+      background-color: #ff0476;
     }
-    border-color: #ebecf0;
+    border-color: #ff0476;
   }
 }
 
@@ -54,8 +54,8 @@
     flex-direction: column;
     position: fixed;
     right: 0;
-    top: 40px;
-    height: calc(100vh - 76px);
+    top: 32px;
+    height: calc(100vh - 7px);
     background: rgba(255, 255, 255, 0.9);
     border-left: 1px solid #c3c3c3;
     width: 136px;
